--- a/index.html
+++ b/index.html
@@ -2,20 +2,39 @@
 <html>
 <head>
     <title>Swapspace.co - Informações Gerais</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+        body {
+            background-color: #121212;
+            color: #ffffff;
+        }
+        h1, h2 {
+            color: #17a2b8;
+        }
+        p {
+            margin-bottom: 20px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Swapspace.co - Informações Gerais</h1>
+    <div class="container mt-5">
+        <h1>Swapspace.co - Informações Gerais</h1>
 
-    <h2>Sobre o Swapspace.co</h2>
-    <p>O Swapspace.co é uma plataforma popular para aqueles que desejam trocar criptomoedas de forma rápida e eficiente. Ele oferece uma maneira fácil de comparar as taxas de câmbio e encontrar as melhores ofertas para suas trocas.</p>
-    <p>É importante destacar que o Swapspace.co não fornece conselhos de investimento. Este artigo é apenas informativo e não deve ser considerado como uma recomendação para comprar ou vender criptomoedas.</p>
+        <h2>Sobre o Swapspace.co</h2>
+        <p>O Swapspace.co é uma plataforma popular para aqueles que desejam trocar criptomoedas de forma rápida e eficiente. Ele oferece uma maneira fácil de comparar as taxas de câmbio e encontrar as melhores ofertas para suas trocas.</p>
+        <p>É importante destacar que o Swapspace.co não fornece conselhos de investimento. Este artigo é apenas informativo e não deve ser considerado como uma recomendação para comprar ou vender criptomoedas.</p>
 
-    <h2>Como Funciona o Swapspace.co</h2>
-    <p>O Swapspace.co é uma plataforma intuitiva que permite aos usuários trocar uma criptomoeda por outra de forma simples. Basta selecionar as moedas que você deseja trocar, inserir a quantia e ver as melhores ofertas disponíveis.</p>
-    <p>Esteja ciente de que o Swapspace.co não oferece aconselhamento financeiro. As trocas de criptomoedas envolvem riscos e é importante fazer sua própria pesquisa antes de prosseguir com qualquer transação.</p>
+        <h2>Como Funciona o Swapspace.co</h2>
+        <p>O Swapspace.co é uma plataforma intuitiva que permite aos usuários trocar uma criptomoeda por outra de forma simples. Basta selecionar as moedas que você deseja trocar, inserir a quantia e ver as melhores ofertas disponíveis.</p>
+        <p>Esteja ciente de que o Swapspace.co não oferece aconselhamento financeiro. As trocas de criptomoedas envolvem riscos e é importante fazer sua própria pesquisa antes de prosseguir com qualquer transação.</p>
 
-    <h2>Segurança no Swapspace.co</h2>
-    <p>O Swapspace.co se preocupa com a segurança de seus usuários. Eles implementam medidas de segurança rigorosas para proteger as informações pessoais e as transações dos clientes. No entanto, lembre-se de que nenhuma plataforma é completamente imune a riscos.</p>
-    <p>Este artigo é apenas informativo e não deve ser interpretado como aconselhamento de segurança. Certifique-se sempre de tomar precauções adicionais ao lidar com criptomoedas e use serviços confiáveis.</p>
+        <h2>Segurança no Swapspace.co</h2>
+        <p>O Swapspace.co se preocupa com a segurança de seus usuários. Eles implementam medidas de segurança rigorosas para proteger as informações pessoais e as transações dos clientes. No entanto, lembre-se de que nenhuma plataforma é completamente imune a riscos.</p>
+        <p>Este artigo é apenas informativo e não deve ser interpretado como aconselhamento de segurança. Certifique-se sempre de tomar precauções adicionais ao lidar com criptomoedas e use serviços confiáveis.</p>
+    </div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
