--- a/index.html
+++ b/index.html
@@ -21,6 +21,59 @@
         <h1>Swapspace.co - Informações Gerais</h1>
 
         <h2>Sobre o Swapspace.co</h2>
+        <p>3 TIPS FOR LAYERING YOUR WINDOW TREATMENTS TO TAKE THEM TO THE NEXT LEVEL
+Layering more than one window treatment is a fantastic way to add both beauty and function to any room.
+
+Using more than one window treatment provides multiple ways to add versatility and efficiency to the windows while tying the whole room together with a cohesive, polished look.
+
+The trick is to find just the right balance between two or three types of window treatments that will complement each other without looking overly decorated or cluttered.
+
+Here are 3 tips to follow when it comes to layering window treatments to create a beautiful finished look and creating a lasting impression!
+
+When layering window treatments, try to pair hard window treatments, like shutters and blinds, with soft window treatments.
+
+Window Treatment Layering Tip #1: Pair Hard Window Treatments With Soft Window Treatments
+Window treatments are categorized in two groups - hard window treatments and soft window treatments.
+
+Hard window treatments utilize hard materials such as wood, metal, or vinyl. Examples of hard window treatments would be blinds, shutters, and certain types of shades like roller or natural woven wood.
+
+Soft window treatments are any coverings that are made from fabrics or other soft materials. Examples of soft window treatments are draperies, curtains, sheers, and shades that are made from fabric such as Roman shades.
+
+If looking for more information about soft window treatments, be sure to read our article Soft Window Treatments 101.
+
+When deciding to layer more than one window treatment in a window, consider mixing a hard treatment with a soft treatment.
+
+Hard window treatments have a sleek and simple design while being incredibly durable. Blinds and shutters have vanes or slats to provide varying degrees of openness and give them amazing versatility.
+
+While hard window treatments are quite functional, pairing them with soft window treatments will add some visual interest and fluidity to the overall look of the window. Soft window treatments like side panels, valances, or sheer curtains will bring movement and a dynamic aspect to the static look and feel of the rest of the window.
+
+Floor length draperies will also add visual height to the room and can make the windows appear bigger. Draperies can be functional, meaning the open and close across the window, or they can be purely decorative. Side panels do not open or close but can still be used to create the sense of height and add a dramatic effect to any window.
+
+There are some wonderful options for pairing hard and soft window treatments. Consider traditional horizontal blinds with café curtains for a window over a kitchen sink or in a bathroom. Use natural wood shutters on the windows of a living room and add long, flowing side panels to draw the eyes upward and add a sense of height to the room. Or hang a soft fabric shade and use a beautiful hardwood cornice to cover the hardware at the top.
+Pairing a hard and soft window treatment is a wonderful way to ensure the finished window is both functional and eye-catching.
+
+Pair sheer window treatments with thicker fabrics or materials when layering more than one window treatment.
+
+Window Treatment Layering Tip #2: Combine Sheer Materials With Thicker Fabrics
+Another great way to layer multiple window treatments is by mixing and matching different types of materials and fabrics.
+
+Sheer window treatments use a light filtering material that allows a certain amount of light to pass through. Sheers are very popular options for shades, curtains and draperies since they are light and airy while still providing a certain level of light control and privacy.
+
+Opacity is a term used to describe the amount of light that can pass through a material or fabric. By choosing to combine two types of materials with different opacities, the range of options will continue to increase.
+
+Layer a thicker window treatment with no opacity with a sheer to create a beautiful range of light filtering options. Pull back the thicker layer during the day to allow natural sunlight to light up the room while the sheer window treatment provides a level of privacy. At night, achieve full privacy with both treatments completely closed. Or open both layers to allow an uninhibited view from your windows.
+
+No opacity means that no light can pass through the material. Please keep in mind that light will still find a way to enter around the materials through any available opening. Blackout liners have complete opacity which means that they do not allow any light to enter through the material itself. Unless these materials are installed with the proper window tracks and hardware, light may still be able to seep in around the edges.
+
+If a room requires total blackout options, such as a home theater or media room, we highly suggest working with a Gotcha Covered expert to make sure these window treatments perform to the level of expectation.
+
+Sheer window treatments provide an ethereal quality to a room making the windows appear to glow. The sheer material is still providing a layer of insulation to the window and preventing clear viewing from the outside in.
+
+If total privacy is desired, simply close the second window treatment layer to add that additional barrier.
+
+Some great examples of these types of layered window treatments would be combining a sheer shading with traversing draperies, sheer curtains over a roller shade, or even sheer draperies layered under heavier drapes.
+
+The versatility and light control options of a room increase greatly when using different window treatments with varying opacity levels.</p>
         <p>O Swapspace.co é uma plataforma popular para aqueles que desejam trocar criptomoedas de forma rápida e eficiente. Ele oferece uma maneira fácil de comparar as taxas de câmbio e encontrar as melhores ofertas para suas trocas.</p>
         <p>É importante destacar que o Swapspace.co não fornece conselhos de investimento. Este artigo é apenas informativo e não deve ser considerado como uma recomendação para comprar ou vender criptomoedas.</p>
 
