--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
         }
     </style>
 </head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-11289384130"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-11289384130');
+</script>
 <body>
     <div class="container mt-5">
         <h1>Swapspace.co - Informações Gerais</h1>
